modal button fixed spacing

--- a/src/components/Checkoutnew/Checkoutnew.scss
+++ b/src/components/Checkoutnew/Checkoutnew.scss
@@ -106,3 +106,8 @@ div.checkout-order {
 .flow-alignment {
   padding: 2rem;
 }
+.unknownStatusButton {
+
+  margin-left:2rem;
+  margin-right:2rem;
+}
